--- a/index.html
+++ b/index.html
@@ -8,6 +8,36 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>NaFis</h1>
+    <section class="top-section">
+        <div class="half-width">
+            <h1>Stay Focused on </h1>
+            <h1><span class="mission-color">Mission 2022</span></h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit accusantium neque reprehenderit sint quae sapiente nemo laboriosam quibusdam, praesentium esse veniam?</p>
+            <a class="exp-btn" target="_blank" href="www.linkdiln.com">Explore Now</a>
+        </div>
+        <div class="half-width">
+            <img src="images/person/person-1.png" alt="">
+        </div>
+    </section>
+    <section>
+        <h1>My Mission in 2022</h1>
+            <div class="top-section">
+                <div id="mission-box" class="half-width">
+                    <img src="images/illustrators/illustrator-1.png" alt="">
+                    <h3>Mission</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, aut quos assumenda nostrum possimus quisquam.</p>
+                </div>
+                <div id="vission-box" class="half-width">
+                    <img src="images/illustrators/illustrator-2.png" alt="">
+                    <h3>Vission</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut deserunt ullam sint iste asperiores blanditiis?</p>
+                </div>
+                <div id="goals-box" class="half-width">
+                    <img src="images/illustrators/illustrator-3.png" alt="">
+                    <h3>Goals</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores perferendis debitis nihil rem. Nam, saepe.</p>
+                </div>
+            </div>
+    </section>
 </body>
 </html>
