--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <section class="top-section">
         <div class="half-width">
-            <h1>Stay Focused on </h1>
-            <h1><span class="mission-color">Mission 2022</span></h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit accusantium neque reprehenderit sint quae sapiente nemo laboriosam quibusdam, praesentium esse veniam?</p>
+            <h1>Stay Focused on<h1>
+            <h1><span class="mission-color"> Mission 2022</span></h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit accusantium neque reprehenderit sint quae sapiente nemo laboriosam quibusdam, praesentium esse veniam?</p>
             <a class="exp-btn" target="_blank" href="www.linkdiln.com">Explore Now</a>
         </div>
         <div class="half-width">
@@ -20,7 +20,7 @@
         </div>
     </section>
     <section>
-        <h1>My Mission in 2022</h1>
+       <h2>My Mission in <span class="mission-color">2022</span></h2>
             <div class="top-section">
                 <div id="mission-box" class="half-width">
                     <img src="images/illustrators/illustrator-1.png" alt="">
@@ -37,7 +37,14 @@
                     <h3>Goals</h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores perferendis debitis nihil rem. Nam, saepe.</p>
                 </div>
-            </div>
+    </div>
     </section>
+<!-- 
+    <section>
+        <div class="border">
+            <h1>Hello</h1>
+            <h1>World</h1>
+        </div>
+    </section> -->
 </body>
 </html>
