--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 <body>
     <section class="top-section">
         <div class="half-width">
-            <h1>Stay Focused on<h1>
-            <h1><span class="mission-color"> Mission 2022</span></h1>
+            <div class="stay-mission-border">
+                <h1>Stay Focused On</h1>
+                <h1><span class="mission-color">Mission 2022 </span></h1>
+            </div>
+            <!-- <h1>Stay Focused on<h1>
+            <h1><span class="mission-color"> Mission 2022</span></h1> -->
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit accusantium neque reprehenderit sint quae sapiente nemo laboriosam quibusdam, praesentium esse veniam?</p>
             <a class="exp-btn" target="_blank" href="www.linkdiln.com">Explore Now</a>
         </div>
@@ -39,12 +43,5 @@
                 </div>
     </div>
     </section>
-<!-- 
-    <section>
-        <div class="border">
-            <h1>Hello</h1>
-            <h1>World</h1>
-        </div>
-    </section> -->
 </body>
 </html>
