--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
                 <h1>Stay Focused On</h1>
                 <h1><span class="mission-color">Mission 2022 </span></h1>
             </div>
-            <!-- <h1>Stay Focused on<h1>
-            <h1><span class="mission-color"> Mission 2022</span></h1> -->
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit accusantium neque reprehenderit sint quae sapiente nemo laboriosam quibusdam, praesentium esse veniam?</p>
             <a class="exp-btn" target="_blank" href="www.linkdiln.com">Explore Now</a>
         </div>
@@ -41,7 +39,12 @@
                     <h3>Goals</h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores perferendis debitis nihil rem. Nam, saepe.</p>
                 </div>
-    </div>
+            </div>
+    </section>
+    <section class="middle-section">
+        <div class="coding-girls">
+            <img src="images/pictures/coding.png" alt="">
+        </div>
     </section>
 </body>
 </html>
