--- a/index.html
+++ b/index.html
@@ -41,10 +41,15 @@
                 </div>
             </div>
     </section>
-    <section class="middle-section">
+    <div class="middle-section">
         <div class="coding-girls">
             <img src="images/pictures/coding.png" alt="">
         </div>
-    </section>
+        <div class="coding-girls">
+            <h2 class="align">Develop <span class="block">With Out Limits</span></h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos incidunt tempore aspernatur odio facere aut alias mollitia ipsam accusamus. Exercitationem nemo, vero eos repellendus in architecto debitis! Nostrum, repudiandae voluptates!</p>
+            <a class="exp-btn" target="_blank" href="link">Exercise now </a>
+        </div>
+    </div>
 </body>
 </html>
