--- a/index.html
+++ b/index.html
@@ -41,14 +41,16 @@
                 </div>
             </div>
     </section>
-    <section class="middle-section">
-        <div class="coding-develop-half-width">
-            <img src="images/pictures/coding.png" alt="">
-        </div>
-        <div class="coding-develop-half-width">
-            <h2 class="develop-align">Develop <span class="block-inline">With Out Limits</span></h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos incidunt tempore aspernatur odio facere aut alias mollitia ipsam accusamus. Exercitationem nemo, vero eos repellendus in architecto debitis! Nostrum, repudiandae voluptates!</p>
-            <a class="exp-btn" target="_blank" href="link">Exercise now </a>
+    <section class="middle-section-background-img">
+        <div class="middle-section">
+            <div class="coding-develop-half-width">
+                <img src="images/pictures/coding.png" alt="">
+            </div>
+            <div class="coding-develop-half-width">
+                <h2 class="develop-align">Develop <span class="block-inline">With Out Limits</span></h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos incidunt tempore aspernatur odio facere aut alias mollitia ipsam accusamus. Exercitationem nemo, vero eos repellendus in architecto debitis! Nostrum, repudiandae voluptates!</p>
+                <a class="exp-btn" target="_blank" href="link">Exercise now </a>
+            </div>
         </div>
     </section>
 </body>
