--- a/index.html
+++ b/index.html
@@ -49,7 +49,19 @@
             <div class="coding-develop-half-width">
                 <h2 class="develop-align">Develop <span class="block-inline">With Out Limits</span></h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos incidunt tempore aspernatur odio facere aut alias mollitia ipsam accusamus. Exercitationem nemo, vero eos repellendus in architecto debitis! Nostrum, repudiandae voluptates!</p>
-                <a class="exp-btn" target="_blank" href="link">Exercise now </a>
+                <a class="exp-btn" target="_blank" href="link">Read The Documentation</a>
+            </div>
+        </div>
+    </section>
+   <section class="know-our-global-background-image">
+        <div class="middle-section">
+            <div class=" coding-develop-half-width">
+                <h2 class="develop-align">Know Our <span class="block-inline">Global Community</span></h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, quaerat placeat veniam eos, rem dolor facere, facilis hic distinctio voluptatem iusto aperiam? Quas facilis doloremque magni, impedit dolores veniam. Rerum.</p>
+                <a class="exp-btn" target="_blank" href="link">Read The Documentation</a>
+            </div>
+            <div id="image-align"  class="coding-develop-half-width">
+                <img src="images/pictures/project.png" alt="">
             </div>
         </div>
     </section>
