--- a/index.html
+++ b/index.html
@@ -65,5 +65,19 @@
             </div>
         </div>
     </section>
+   <section>
+    <h2>Build <span class="mission-color"> Corona Application</span></h2>
+       <div class="middle-section">
+           <div class="coding-develop-half-width">
+               <img src="images/pictures/app.png" alt="">
+           </div>
+           <div class="coding-develop-half-width">
+            <h2 class="develop-align">Stay Safe With Go<span class="block-inline mission-color">Covid</span></h2>
+            <!-- <h2>Stay Safe With Go <span class="mission-color">Corona</span></h2> -->
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit ex, sint aliquid non sit sequi soluta incidunt, corrupti dignissimos, deserunt ut saepe. Delectus reiciendis voluptatum obcaecati perferendis numquam enim illum!</p>
+                <a class="exp-btn" target="_blank" href="link">App Fetures</a>
+           </div>
+       </div>
+   </section>
 </body>
 </html>
