--- a/index.html
+++ b/index.html
@@ -73,11 +73,14 @@
            </div>
            <div class="coding-develop-half-width">
             <h2 class="develop-align">Stay Safe With Go<span class="block-inline mission-color">Covid</span></h2>
-            <!-- <h2>Stay Safe With Go <span class="mission-color">Corona</span></h2> -->
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit ex, sint aliquid non sit sequi soluta incidunt, corrupti dignissimos, deserunt ut saepe. Delectus reiciendis voluptatum obcaecati perferendis numquam enim illum!</p>
                 <a class="exp-btn" target="_blank" href="link">App Fetures</a>
            </div>
        </div>
    </section>
+   <div class="footer">
+       <h2>Mission 2022</h2>
+       <footer>Hard work, Perseverance, and Determination for 2022</footer>
+   </div>
 </body>
 </html>
