--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <h1>Stay Focused On</h1>
                 <h1><span class="mission-color">Mission 2022 </span></h1>
             </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit accusantium neque reprehenderit sint quae sapiente nemo laboriosam quibusdam, praesentium esse veniam?</p>
+                <p>InshaAllah in 2022 I will be focusing on programming, through which I will take my career to a higher level, and I am very confident I am with my skills.</p>
             <a class="exp-btn" target="_blank" href="www.linkdiln.com">Explore Now</a>
         </div>
         <div class="half-width">
@@ -27,17 +27,17 @@
                 <div id="mission-box" class="half-width">
                     <img src="images/illustrators/illustrator-1.png" alt="">
                     <h3>Mission</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, aut quos assumenda nostrum possimus quisquam.</p>
+                    <p>To enhancing the business growth of our customers with creative Design and Development to deliver market-defining high-quality solutions that create value and consistent competitive advantage for our clients around the world.</p>
                 </div>
                 <div id="vission-box" class="half-width">
                     <img src="images/illustrators/illustrator-2.png" alt="">
                     <h3>Vission</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut deserunt ullam sint iste asperiores blanditiis?</p>
+                    <p>To become a prime performer, in providing quality Web, Print and Software solutions in the competitive global market place.</p>
                 </div>
                 <div id="goals-box" class="half-width">
                     <img src="images/illustrators/illustrator-3.png" alt="">
                     <h3>Goals</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores perferendis debitis nihil rem. Nam, saepe.</p>
+                    <p> As a developer or a CTO, the aim is to build practical applications that will be 100% successful. To achieve this, specific goals need to be set, which include: Enhancing your networking skills.</p>
                 </div>
             </div>
     </section>
@@ -48,17 +48,17 @@
             </div>
             <div class="coding-develop-half-width">
                 <h2 class="develop-align">Develop <span class="block-inline">With Out Limits</span></h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos incidunt tempore aspernatur odio facere aut alias mollitia ipsam accusamus. Exercitationem nemo, vero eos repellendus in architecto debitis! Nostrum, repudiandae voluptates!</p>
-                <a class="exp-btn" target="_blank" href="link">Read The Documentation</a>
+                <p>We pride ourselves on delivering bespoke, high quality quality outdoor learning experiences that enhance the confidence and skills of the participants through leadership and activities. Programmes range from Bushcraft skills to Mountain and River Adventures and includes Multi Activity.</p>
+                <a class="exp-btn" target="_blank" href="link">No Limits Coding</a>
             </div>
         </div>
     </section>
    <section class="know-our-global-background-image">
         <div class="middle-section">
             <div class=" coding-develop-half-width">
-                <h2 class="develop-align">Know Our <span class="block-inline">Global Community</span></h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, quaerat placeat veniam eos, rem dolor facere, facilis hic distinctio voluptatem iusto aperiam? Quas facilis doloremque magni, impedit dolores veniam. Rerum.</p>
-                <a class="exp-btn" target="_blank" href="link">Read The Documentation</a>
+                <h2 class="develop-align">Know Our <span class="block-inline">PHero Community</span></h2>
+                <p>There is a danger in treating complex problems as if they were much simpler than they really are. Especially in industries like financial services! When simple becomes simplistic, we run the risk of disempowering our users.</p>
+                <a class="exp-btn" target="_blank" href="link">PHero Community</a>
             </div>
             <div id="image-align"  class="coding-develop-half-width">
                 <img src="images/pictures/project.png" alt="">
@@ -66,21 +66,21 @@
         </div>
     </section>
    <section>
-    <h2>Build <span class="mission-color"> Corona Application</span></h2>
-       <div class="middle-section">
-           <div class="coding-develop-half-width">
-               <img src="images/pictures/app.png" alt="">
-           </div>
-           <div class="coding-develop-half-width">
-            <h2 class="develop-align">Stay Safe With Go<span class="block-inline mission-color">Covid</span></h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit ex, sint aliquid non sit sequi soluta incidunt, corrupti dignissimos, deserunt ut saepe. Delectus reiciendis voluptatum obcaecati perferendis numquam enim illum!</p>
-                <a class="exp-btn" target="_blank" href="link">App Fetures</a>
-           </div>
-       </div>
+    <h2>Build <span class="mission-color"> Web Application</span></h2>
+        <div class="build-section">
+            <div class="build-half-width fish">
+                <img src="images/pictures/fisher.png" alt="">
+            </div>
+            <div class="build-half-width know">
+                    <h2 class="develop-align">Know your <span class="mission-color">Potential</span></h2>
+                    <p>“What are you capable of doing?” This world may have fed you with unrealistic expectations from the beginning, and it may be keeping you from understanding your potential.</p>
+                    <a class="exp-btn" href="">Grow Up</a>
+            </div>
+        </div>
    </section>
    <div class="footer">
-       <h2>Mission 2022</h2>
-       <footer>Hard work, Perseverance, and Determination for 2022</footer>
+       <h2><span style="color:white;">Mission </span><span class="mission-color">2022</span></h2>
+       <footer><span style="color: white;">Hard work, Perseverance, and Determination for 2022</span></footer>
    </div>
 </body>
 </html>
