--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <h1><span class="mission-color">Mission 2022 </span></h1>
             </div>
                 <p>InshaAllah in 2022 I will be focusing on programming, through which I will take my career to a higher level, and I am very confident I am with my skills.</p>
-            <a class="exp-btn" target="_blank" href="www.linkdiln.com">Explore Now</a>
+            <a class="exp-btn" target="_blank" href="https://www.instagram.com/nafis_fuad_mim/">Explore Now</a>
         </div>
         <div class="half-width">
             <img src="images/person/person-1.png" alt="">
@@ -49,7 +49,7 @@
             <div class="coding-develop-half-width">
                 <h2 class="develop-align">Develop <span class="block-inline">With Out Limits</span></h2>
                 <p>We pride ourselves on delivering bespoke, high quality quality outdoor learning experiences that enhance the confidence and skills of the participants through leadership and activities. Programmes range from Bushcraft skills to Mountain and River Adventures and includes Multi Activity.</p>
-                <a class="exp-btn" target="_blank" href="link">No Limits Coding</a>
+                <a class="exp-btn" target="_blank" href="https://www.instagram.com/nafis_fuad_mim/">No Limits Coding</a>
             </div>
         </div>
     </section>
@@ -58,7 +58,7 @@
             <div class=" coding-develop-half-width">
                 <h2 class="develop-align">Know Our <span class="block-inline">PHero Community</span></h2>
                 <p>There is a danger in treating complex problems as if they were much simpler than they really are. Especially in industries like financial services! When simple becomes simplistic, we run the risk of disempowering our users.</p>
-                <a class="exp-btn" target="_blank" href="link">PHero Community</a>
+                <a class="exp-btn" target="_blank" href="https://www.instagram.com/nafis_fuad_mim/">PHero Community</a>
             </div>
             <div id="image-align"  class="coding-develop-half-width">
                 <img src="images/pictures/project.png" alt="">
@@ -74,7 +74,7 @@
             <div class="build-half-width know">
                     <h2 class="develop-align">Know your <span class="mission-color">Potential</span></h2>
                     <p>“What are you capable of doing?” This world may have fed you with unrealistic expectations from the beginning, and it may be keeping you from understanding your potential.</p>
-                    <a class="exp-btn" href="">Grow Up</a>
+                    <a class="exp-btn" target="_blank" href="https://www.instagram.com/nafis_fuad_mim/">Grow Up</a>
             </div>
         </div>
    </section>
